remove kb-sdk config, add manifest, add additional openapi metadata, fix get_linking_sessions [CE-162]
